<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context="com.example.surjit.customalertdialogbox.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="alertDialogBoxSimple"
        android:text="@string/alert_dialog_simple" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="alertDialogBoxSelectItems"
        android:text="@string/alert_dialog_select_items" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="alertDialogBoxMultiChoiceItems"
        android:text="@string/alert_dialog_multi_choice_items" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="alertDialogBoxSingleChoiceItems"
        android:text="@string/alert_dialog_single_choice_items" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="customAlertDialogBoxEditTextOnly"
        android:text="@string/custom_alert_dialog_box_edit_text" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="customAlertDialogBoxEditTextButton"
        android:text="@string/custom_alert_edit_text_button" />

</LinearLayout>
